--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -11,4 +11,5 @@
 // @use "./blocks/сommon-blocks/section";
 //blocks
 @use "../blocks/header/_header.scss";
+@use "../blocks/promo/_promo-main-page.scss";
 @use "../blocks/footer/_footer.scss";
