--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -7,6 +7,7 @@ body {
   flex-direction: column;
   font-family: var(--font-family);
   line-height: 1.27;
+  font-weight: 400;
   color: var(--text-color-dark);
   background-color: var(--color-light);
 
@@ -30,7 +31,7 @@ main {
 }
 h1,
 .h1 {
-  @include fluid-text(64, 40);
+  @include fluid-text(48, 24);
 }
 h2,
 .h2 {
