--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -28,6 +28,17 @@
   // --color-gray-75: #f8efef;
   --color-gray-50: #fbf8f8;
 
+  --color-grad-1: linear-gradient(
+    180deg,
+    #363130 0%,
+    #363433 25.96%,
+    #352f2e 49.04%,
+    #413d3c 66.66%,
+    #474342 76.95%,
+    #514d4c 86.12%,
+    #524d4c 100%
+  );
+
   --color-white-opacity-10: #ffffff34;
   --color-white-opacity-35: #ffffffa8;
   // --color-white-opacity-90: #ffffffe6;
@@ -44,6 +55,7 @@
   --color-blue-light: #2cabea;
   // ================ //
   --color-light: #ffffff;
+  --color-black-light: #363535;
 
   --text-color-light: var(--color-gray-50);
   --text-color-dark: var(--color-gray-900);
@@ -69,6 +81,7 @@
 
   --letter-spacing: 0.01em;
   --container-width: #{rem(1260)};
+  --container-width-big: #{rem(1920)};
   --container-padding-x: #{rem(20)};
 
   --button-height-small: #{rem(34)};
