--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -2,19 +2,9 @@
 
 /* Styles for common block section */
 .section {
-  // padding-top: var(--section-padding);
-
-  // &__title {
-  //   color: var(--color-accent-dark);
-  //   text-align: center;
-  //   text-transform: uppercase;
-  //   padding-inline: var(--container-padding-x);
-  //   margin-bottom: fluid(70, 20);
-
-  //   @include mobile-media {
-  //     text-align: start;
-  //   }
-  // }
+  &__subtitle {
+  }
 }
+
 /*  ===================================  */
 /*  ===================================  */
