--- a/styles/blocks/header/_call-up.scss
+++ b/styles/blocks/header/_call-up.scss
@@ -21,7 +21,7 @@
     font-weight: 400;
     letter-spacing: 0.02em;
     text-align: center;
-    color: var(--text-color-secondary-light);
+    color: var(--text-color-medium);
   }
 }
 
