--- a/styles/blocks/header/_header-menu.scss
+++ b/styles/blocks/header/_header-menu.scss
@@ -4,6 +4,8 @@
 .header-menu {
   &--not-to-scroll {
     /* Временно , заменить на display none , через JS */
+    // min-height: rem(50);
+    // height: auto;
     animation-name: hidden-to-scroll;
     animation-fill-mode: both;
     animation-timeline: scroll();
@@ -38,6 +40,7 @@
 @include tablet-media {
   .header-menu {
     &__list {
+      font-size: rem(15);
       max-width: rem(760);
     }
   }
