--- a/styles/blocks/сommon-blocks/_button.scss
+++ b/styles/blocks/сommon-blocks/_button.scss
@@ -34,7 +34,7 @@
   &--light {
     line-height: 1.69;
     background-color: var(--color-light);
-    color: var(--text-color-secondary);
+    color: var(--text-color-medium);
     border: rem(1) solid currentColor;
 
     &-accent {
