--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -12,4 +12,5 @@
 //blocks
 @use "../blocks/header/_header.scss";
 @use "../blocks/promo/_promo-main-page.scss";
+@use "../blocks/overview-services/_overview-services.scss";
 @use "../blocks/footer/_footer.scss";
