--- a/styles/blocks/footer/footer.css
+++ b/styles/blocks/footer/footer.css
@@ -50,13 +50,14 @@
 .footer__inner {
   padding-block: clamp(0.9375rem, 0.6468023256rem + 1.1627906977vw, 1.5625rem) clamp(1.375rem, 0.2122093023rem + 4.6511627907vw, 3.875rem);
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto;
   grid-template-rows: repeat(2, auto);
   row-gap: clamp(1.9375rem, 1.414244186rem + 2.0930232558vw, 3.0625rem);
   column-gap: 1.625rem;
 }
 .footer__heading {
-  max-width: 20.6875rem;
+  max-width: 21.875rem;
+  width: 100%;
 }
 .footer__heading-text {
   font-size: 0.8125rem;
@@ -104,7 +105,7 @@
 .footer__qs-line-text {
   font-size: 0.9375rem;
   line-height: 1.3;
-  max-width: 14.375rem;
+  max-width: 14.6875rem;
 }
 .footer__yandex-button {
   grid-area: yandex;
@@ -130,7 +131,7 @@
 .footer__links-list {
   display: flex;
   flex-direction: column;
-  gap: 1.875rem 1.875rem;
+  gap: 1.9375rem 1.875rem;
 }
 .footer__links-link {
   letter-spacing: 0.06em;
@@ -157,59 +158,85 @@
   }
 }
 @media (width <= 63.99875rem) {
+  .footer .container {
+    --container-padding-x: 1.875rem;
+  }
   .footer__inner {
-    grid-template-areas: "heading heading" "buttons buttons" "links-list svc";
+    padding-block: 1.5625rem 3.9375rem;
+    grid-template-areas: "heading buttons" "links-list links-list" "svc svc";
+    column-gap: 2.125rem;
   }
   .footer__heading {
     grid-area: heading;
     justify-self: center;
-    max-width: unset;
     text-align: center;
+    margin-left: -0.625rem;
   }
-  .footer__buttons {
-    grid-area: buttons;
+  .footer__heading-text {
+    font-size: 0.75rem;
+    letter-spacing: 0;
   }
   .footer__links {
     grid-area: links-list;
+    margin-bottom: 1.375rem;
+  }
+  .footer__links-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.25rem 1.5rem;
   }
   .footer__svc-links {
     grid-area: svc;
+    max-width: unset;
   }
   .footer__buttons {
+    grid-area: buttons;
     margin-inline: auto;
-    grid-template-columns: 1fr 1fr auto;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
     max-width: unset;
     width: 100%;
-    grid-template-rows: 1fr;
-    grid-template-areas: "yandex button qs";
-    row-gap: 2.25rem;
+    grid-template-areas: "yandex button" ". qs";
+    row-gap: 1rem;
+  }
+  .footer__button {
+    align-self: start;
+  }
+  .footer__yandex-button {
+    width: 3.375rem;
+    height: 4.3125rem;
+    align-self: start;
   }
 }
 @media (width <= 47.99875rem) {
-  .footer .conteiner {
+  .footer .container {
     --container-padding-x: 1rem;
   }
   .footer__inner {
+    padding-block: 0.6875rem 1.375rem;
+    grid-template-columns: 1fr;
     grid-template-areas: "heading" "buttons" "links-list" "svc";
     row-gap: 0;
   }
   .footer__heading {
+    max-width: unset;
     width: 100%;
     margin-bottom: 1rem;
-  }
-  .footer__heading-text {
-    font-size: 0.75rem;
-    letter-spacing: 0.03em;
+    margin-left: unset;
   }
   .footer__logo {
-    margin-bottom: 0.875rem;
+    margin-bottom: 1.125rem;
   }
   .footer__buttons {
     grid-template-rows: 1fr minmax(5.75rem, auto);
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: "button button" "yandex qs";
-    column-gap: 1.875rem;
+    column-gap: 1.6875rem;
+    row-gap: 2.3125rem;
     margin-bottom: 1.5rem;
+  }
+  .footer__qs-line {
+    min-width: 14.9375rem;
   }
   .footer__yandex-button {
     align-self: start;
@@ -225,9 +252,6 @@
   }
 }
 @media (width <= 30.06125rem) {
-  .footer__heading {
-    margin-left: -0.625rem;
-  }
   .footer__yandex-button {
     margin-top: 0.4375rem;
   }
