--- a/styles/blocks/header/_header-top-menu.scss
+++ b/styles/blocks/header/_header-top-menu.scss
@@ -34,14 +34,14 @@
   }
 }
 
-@include mobile-media {
+@include tablet-media {
   .header-top-menu {
     &__list {
       flex-direction: column;
+      justify-content: center;
       width: 100%;
       height: 100vh;
       background-color: transparent;
-      padding-block: 20% 0;
     }
   }
 }
