--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -20,7 +20,7 @@
   font-weight: 400;
   letter-spacing: 0.02em;
   text-align: center;
-  color: var(--text-color-secondary-light);
+  color: var(--text-color-medium);
 }
 
 @media (width <= 63.99875rem) {
@@ -66,6 +66,7 @@
 }
 @media (width <= 63.99875rem) {
   .header-menu__list {
+    font-size: 0.9375rem;
     max-width: 47.5rem;
   }
 }
@@ -110,13 +111,13 @@
   color: var(--color-green-light);
 }
 
-@media (width <= 47.99875rem) {
+@media (width <= 63.99875rem) {
   .header-top-menu__list {
     flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100vh;
     background-color: transparent;
-    padding-block: 20% 0;
   }
 }
 /*  ===================================  */
@@ -249,28 +250,36 @@
     column-gap: 1.5rem;
   }
 }
-@media (width <= 47.99875rem) {
-  .header {
-    background-color: var(--color-light);
-  }
+@media (width <= 63.99875rem) {
   .header__logo {
     grid-area: logo;
   }
   .header__general {
-    padding-inline: 0.625rem 0.5rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "logo burger" "buttons buttons";
+    grid-template-columns: 1fr auto auto;
+    grid-template-areas: "logo buttons burger";
     row-gap: 1rem;
   }
   .header__buttons {
-    justify-content: center;
-    column-gap: 1rem;
     grid-area: buttons;
+    justify-content: center;
   }
   .header__mobile-menu {
     grid-area: burger;
     justify-self: end;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header {
+    background-color: var(--color-light);
+  }
+  .header__general {
+    padding-inline: 0.625rem 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "logo burger" "buttons buttons";
+  }
+  .header__buttons {
+    column-gap: 1rem;
   }
 }
 @media (width <= 30.06125rem) {
