--- a/styles/blocks/promo/_promo-main-page.scss
+++ b/styles/blocks/promo/_promo-main-page.scss
@@ -10,6 +10,7 @@
   color: var(--text-color-light);
   min-height: var(--promoMinHeight);
   overflow: hidden;
+  margin-block: 0 var(--section-margin-y);
 
   &__background {
     position: absolute;
@@ -26,7 +27,7 @@
   }
 
   &__inner {
-    padding-block: var(--promoPaddingBlock);
+    padding-block: var(--promoPaddingBlock) 0;
   }
 
   &__body {
@@ -121,19 +122,50 @@
 }
 @include tablet-media {
   .promo {
+    --promoBackgroundHeight: #{rem(394)};
+    --promoMainImageWidth: #{rem(316)};
+    --promoMainImageHeight: #{rem(316)};
+
+    .container {
+      --container-padding-x: #{rem(43)};
+    }
+
     &__main-image {
       &-wrapper {
-        bottom: calc(var(--promoPaddingBlock) * -3);
+        bottom: rem(-50);
+        right: rem(24);
+
+        &::after {
+          height: rem(40);
+        }
       }
+    }
+
+    &__title {
+      max-width: rem(462);
+      font-size: rem(24);
+      margin-bottom: rem(31);
+    }
+
+    &__subtitle {
+      max-width: rem(336);
+      font-size: rem(16);
+      margin-bottom: rem(31);
     }
   }
 }
 @include mobile-media {
   .promo {
+    --promoBackgroundHeight: #{rem(500)};
     --promoMinHeight: rem(720);
-    --promoMainImageWidth: rem(316);
-    --promoMainImageHeight: rem(316);
 
+    .container {
+      --container-padding-x: #{rem(12)};
+    }
+
+    &__background {
+      background: var(--color-grad-2), var(--color-grad-1);
+    }
     &__body {
       display: flex;
       flex-direction: column;
@@ -141,6 +173,8 @@
     }
 
     &__title {
+      max-width: rem(320);
+      margin-inline: auto;
       order: -2;
       text-align: center;
       line-height: 1.3;
@@ -148,6 +182,7 @@
     }
 
     &__subtitle {
+      max-width: unset;
       margin-bottom: rem(10);
       color: var(--text-color-dark);
       font-weight: 600;
@@ -161,10 +196,6 @@
         order: -1;
         margin-inline: auto;
         margin-bottom: fluid(50, 26);
-
-        &::after {
-          height: rem(40);
-        }
       }
 
       width: rem(316);
