--- a/styles/blocks/promo/promo-main-page.css
+++ b/styles/blocks/promo/promo-main-page.css
@@ -8,6 +8,7 @@
   color: var(--text-color-light);
   min-height: var(--promoMinHeight);
   overflow: hidden;
+  margin-block: 0 var(--section-margin-y);
 }
 .promo__background {
   position: absolute;
@@ -22,7 +23,7 @@
   min-height: inherit;
 }
 .promo__inner {
-  padding-block: var(--promoPaddingBlock);
+  padding-block: var(--promoPaddingBlock) 0;
 }
 .promo__body {
   position: relative;
@@ -95,15 +96,42 @@
   }
 }
 @media (width <= 63.99875rem) {
+  .promo {
+    --promoBackgroundHeight: 24.625rem;
+    --promoMainImageWidth: 19.75rem;
+    --promoMainImageHeight: 19.75rem;
+  }
+  .promo .container {
+    --container-padding-x: 2.6875rem;
+  }
   .promo__main-image-wrapper {
-    bottom: calc(var(--promoPaddingBlock) * -3);
+    bottom: -3.125rem;
+    right: 1.5rem;
+  }
+  .promo__main-image-wrapper::after {
+    height: 2.5rem;
+  }
+  .promo__title {
+    max-width: 28.875rem;
+    font-size: 1.5rem;
+    margin-bottom: 1.9375rem;
+  }
+  .promo__subtitle {
+    max-width: 21rem;
+    font-size: 1rem;
+    margin-bottom: 1.9375rem;
   }
 }
 @media (width <= 47.99875rem) {
   .promo {
+    --promoBackgroundHeight: 31.25rem;
     --promoMinHeight: rem(720);
-    --promoMainImageWidth: rem(316);
-    --promoMainImageHeight: rem(316);
+  }
+  .promo .container {
+    --container-padding-x: 0.75rem;
+  }
+  .promo__background {
+    background: var(--color-grad-2), var(--color-grad-1);
   }
   .promo__body {
     display: flex;
@@ -111,12 +139,15 @@
     justify-content: space-between;
   }
   .promo__title {
+    max-width: 20rem;
+    margin-inline: auto;
     order: -2;
     text-align: center;
     line-height: 1.3;
     margin-bottom: 1.1875rem;
   }
   .promo__subtitle {
+    max-width: unset;
     margin-bottom: 0.625rem;
     color: var(--text-color-dark);
     font-weight: 600;
@@ -132,9 +163,6 @@
     order: -1;
     margin-inline: auto;
     margin-bottom: clamp(1.625rem, 0.9273255814rem + 2.7906976744vw, 3.125rem);
-  }
-  .promo__main-image-wrapper::after {
-    height: 2.5rem;
   }
   .promo__button {
     width: 100%;
