--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -149,8 +149,10 @@ svg * {
   --color-accent-50: #fefdfd;
   --color-accent-200: #f2e5e1;
   --color-accent-500: #fe4f02;
+  --color-accent-600: #dc4401;
   --color-gray-900: #161312;
   --color-gray-800: #352f2e;
+  --color-gray-700: #66605f;
   --color-gray-600: #746e6d;
   --color-gray-500: #968e8e;
   --color-gray-300: #e1dcdb;
@@ -165,6 +167,7 @@ svg * {
     #514d4c 86.12%,
     #524d4c 100%
   );
+  --color-grad-2: linear-gradient(90deg, #44362e75 35.45%, #beb19f12 78.09%);
   --color-white-opacity-10: #ffffff34;
   --color-white-opacity-35: #ffffffa8;
   --color-black-opacity-80: #00000033;
@@ -177,8 +180,8 @@ svg * {
   --color-black-light: #363535;
   --text-color-light: var(--color-gray-50);
   --text-color-dark: var(--color-gray-900);
-  --text-color-secondary: var(--color-gray-600);
-  --text-color-secondary-light: var(--color-gray-600);
+  --text-color-dark-secondary: var(--color-gray-700);
+  --text-color-medium: var(--color-gray-600);
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
   --color-success: var(--color-green);
@@ -194,6 +197,7 @@ svg * {
   --container-width: 78.75rem;
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
+  --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
   --button-height-small: 2.125rem;
   --button-height: 2.625rem;
   --button-height-big: 2.875rem;
@@ -207,6 +211,11 @@ svg * {
 @media (width <= 63.99875rem) {
   :root {
     --container-padding-x: 1.25rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  :root {
+    --container-padding-x: 0.625rem;
   }
 }
 
@@ -254,6 +263,12 @@ svg * {
   }
 }
 
+@media (width <= 100.06125rem) {
+  .hidden-desktop {
+    display: none !important;
+  }
+}
+
 @media (width > 47.99875rem) {
   .visible-mobile {
     display: none !important;
@@ -268,6 +283,12 @@ svg * {
 
 @media (width > 81.31125rem) {
   .visible-laptop {
+    display: none !important;
+  }
+}
+
+@media (width > 100.06125rem) {
+  .visible-desktop {
     display: none !important;
   }
 }
@@ -400,10 +421,10 @@ button[aria-label]::before {
 }
 @keyframes hidden-to-scroll {
   to {
-    position: absolute;
     translate: 0 -62.5rem;
     height: 0.0625rem;
     overflow: hidden;
+    position: absolute;
   }
 }
 /*  ===================================  */
@@ -446,7 +467,7 @@ button[aria-label]::before {
 .button--light {
   line-height: 1.69;
   background-color: var(--color-light);
-  color: var(--text-color-secondary);
+  color: var(--text-color-medium);
   border: 0.0625rem solid currentColor;
 }
 .button--light-accent {
@@ -518,7 +539,7 @@ button[aria-label]::before {
   font-weight: 400;
   letter-spacing: 0.02em;
   text-align: center;
-  color: var(--text-color-secondary-light);
+  color: var(--text-color-medium);
 }
 
 @media (width <= 63.99875rem) {
@@ -564,6 +585,7 @@ button[aria-label]::before {
 }
 @media (width <= 63.99875rem) {
   .header-menu__list {
+    font-size: 0.9375rem;
     max-width: 47.5rem;
   }
 }
@@ -608,13 +630,13 @@ button[aria-label]::before {
   color: var(--color-green-light);
 }
 
-@media (width <= 47.99875rem) {
+@media (width <= 63.99875rem) {
   .header-top-menu__list {
     flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100vh;
     background-color: transparent;
-    padding-block: 20% 0;
   }
 }
 /*  ===================================  */
@@ -747,28 +769,36 @@ button[aria-label]::before {
     column-gap: 1.5rem;
   }
 }
-@media (width <= 47.99875rem) {
-  .header {
-    background-color: var(--color-light);
-  }
+@media (width <= 63.99875rem) {
   .header__logo {
     grid-area: logo;
   }
   .header__general {
-    padding-inline: 0.625rem 0.5rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "logo burger" "buttons buttons";
+    grid-template-columns: 1fr auto auto;
+    grid-template-areas: "logo buttons burger";
     row-gap: 1rem;
   }
   .header__buttons {
-    justify-content: center;
-    column-gap: 1rem;
     grid-area: buttons;
+    justify-content: center;
   }
   .header__mobile-menu {
     grid-area: burger;
     justify-self: end;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header {
+    background-color: var(--color-light);
+  }
+  .header__general {
+    padding-inline: 0.625rem 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "logo burger" "buttons buttons";
+  }
+  .header__buttons {
+    column-gap: 1rem;
   }
 }
 @media (width <= 30.06125rem) {
@@ -790,6 +820,7 @@ button[aria-label]::before {
   color: var(--text-color-light);
   min-height: var(--promoMinHeight);
   overflow: hidden;
+  margin-block: 0 var(--section-margin-y);
 }
 .promo__background {
   position: absolute;
@@ -804,7 +835,7 @@ button[aria-label]::before {
   min-height: inherit;
 }
 .promo__inner {
-  padding-block: var(--promoPaddingBlock);
+  padding-block: var(--promoPaddingBlock) 0;
 }
 .promo__body {
   position: relative;
@@ -877,15 +908,42 @@ button[aria-label]::before {
   }
 }
 @media (width <= 63.99875rem) {
+  .promo {
+    --promoBackgroundHeight: 24.625rem;
+    --promoMainImageWidth: 19.75rem;
+    --promoMainImageHeight: 19.75rem;
+  }
+  .promo .container {
+    --container-padding-x: 2.6875rem;
+  }
   .promo__main-image-wrapper {
-    bottom: calc(var(--promoPaddingBlock) * -3);
+    bottom: -3.125rem;
+    right: 1.5rem;
+  }
+  .promo__main-image-wrapper::after {
+    height: 2.5rem;
+  }
+  .promo__title {
+    max-width: 28.875rem;
+    font-size: 1.5rem;
+    margin-bottom: 1.9375rem;
+  }
+  .promo__subtitle {
+    max-width: 21rem;
+    font-size: 1rem;
+    margin-bottom: 1.9375rem;
   }
 }
 @media (width <= 47.99875rem) {
   .promo {
+    --promoBackgroundHeight: 31.25rem;
     --promoMinHeight: rem(720);
-    --promoMainImageWidth: rem(316);
-    --promoMainImageHeight: rem(316);
+  }
+  .promo .container {
+    --container-padding-x: 0.75rem;
+  }
+  .promo__background {
+    background: var(--color-grad-2), var(--color-grad-1);
   }
   .promo__body {
     display: flex;
@@ -893,12 +951,15 @@ button[aria-label]::before {
     justify-content: space-between;
   }
   .promo__title {
+    max-width: 20rem;
+    margin-inline: auto;
     order: -2;
     text-align: center;
     line-height: 1.3;
     margin-bottom: 1.1875rem;
   }
   .promo__subtitle {
+    max-width: unset;
     margin-bottom: 0.625rem;
     color: var(--text-color-dark);
     font-weight: 600;
@@ -915,9 +976,6 @@ button[aria-label]::before {
     margin-inline: auto;
     margin-bottom: clamp(1.625rem, 0.9273255814rem + 2.7906976744vw, 3.125rem);
   }
-  .promo__main-image-wrapper::after {
-    height: 2.5rem;
-  }
   .promo__button {
     width: 100%;
   }
@@ -927,6 +985,265 @@ button[aria-label]::before {
     --promoMinHeight: rem(660);
     --promoBackgroundHeight: 30.25rem;
     --promoPaddingBlock: 2.5rem;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Style for accent red link from common blocks */
+.accent-color-link {
+  font-weight: 700;
+  font-size: 0.8125rem;
+  line-height: 1.7;
+  letter-spacing: var(--letter-spacing);
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-accent-600);
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for common block service */
+.service__name {
+  display: flex;
+  align-items: center;
+  column-gap: 0.625rem;
+  line-height: 1.2;
+  min-height: 4.75rem;
+  padding-inline: 0.625rem;
+}
+.service__name-icon {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.service__link {
+  font-weight: 700;
+  line-height: 1.4;
+}
+.service__link--name {
+  font-size: 1.5rem;
+  line-height: 1.2;
+}
+.service__link--name-small {
+  font-size: 1.25rem;
+}
+.service__link--arrow {
+  font-size: 0.9375rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-transform: uppercase;
+  width: 100%;
+}
+.service__link--arrow::after {
+  content: "➜";
+  width: 1.125rem;
+  height: 1.125rem;
+  color: currentColor;
+  font-size: inherit;
+}
+.service__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+.service__list-item {
+  display: inline-flex;
+  width: 100%;
+  min-height: 3.125rem;
+  padding-inline: 0.625rem 0.25rem;
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for common block services-menu . ( it's third block in the home page )*/
+.services-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+.services-menu__item {
+  width: 100%;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+  padding: 1.5rem 0.625rem 1.875rem;
+}
+.services-menu__name {
+  align-self: start;
+}
+.services-menu__service {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-self: start;
+  row-gap: 1.875rem;
+  width: 100%;
+}
+.services-menu__service-list {
+  width: 100%;
+}
+.services-menu__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.5rem;
+}
+.services-menu__buttons-note {
+  max-width: 16.0625rem;
+  font-size: 0.75rem;
+  line-height: 1.2;
+  color: var(--text-color-dark-secondary);
+}
+
+@media (width <= 63.99875rem) {
+  .services-menu {
+    gap: 1.25rem;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* That's styles for services promotion. General component is overview-services on the home page */
+.services-promotion {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.services-promotion__image {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 6.25rem;
+  height: 6.25rem;
+}
+.services-promotion__list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.services-promotion__list-item {
+  width: 100%;
+}
+.services-promotion__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  max-width: 18.5625rem;
+  width: 100%;
+  min-height: 10.625rem;
+  padding-inline: 1.5rem;
+  background-color: var(--color-black-light);
+  color: var(--color-light);
+  border-radius: var(--border-radius-small);
+}
+.services-promotion__card-title {
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+}
+.services-promotion__card-text {
+  position: relative;
+  z-index: 1;
+  max-width: 12.5rem;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.4;
+}
+
+@media (width <= 100.06125rem) {
+  .services-promotion {
+    gap: 1.25rem;
+  }
+  .services-promotion__list {
+    align-items: center;
+    flex-direction: row;
+    gap: 1.5rem;
+  }
+  .services-promotion__card {
+    max-width: 100%;
+  }
+}
+@media (width <= 81.31125rem) {
+  .services-promotion__list {
+    flex-direction: column;
+    gap: 1.25rem;
+    max-width: 31.875rem;
+    width: 100%;
+  }
+  .services-promotion__image {
+    right: 32px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .services-promotion {
+    gap: 0.625rem;
+  }
+  .services-promotion__list {
+    gap: 0.625rem;
+  }
+  .services-promotion__image {
+    right: 16px;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for block overview-services on the home page */
+.overview-services {
+  display: flex;
+  gap: 1.5rem;
+  margin-block: 0 var(--section-margin-y);
+}
+.overview-services__services-menu .services-menu__list {
+  max-width: 58.75rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "tire-fitting car-wash сar-rapair" "tire-fitting car-wash сar-rapair" "tire-fitting car-wash сar-rapair";
+  gap: 1.5rem;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-1 {
+  grid-area: tire-fitting;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-2 {
+  grid-area: car-wash;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-3 {
+  grid-area: сar-rapair;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-4 {
+  padding-inline: 1.5rem;
+  grid-area: technical-inspection;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-5 {
+  padding-inline: 1.5rem;
+  grid-area: refill-conditioning;
+}
+.overview-services__services-menu .services-menu__list .services-menu__item--grid-cell-6 {
+  padding-inline: 1.5rem;
+  grid-area: wheel-alignment;
+}
+
+@media (width <= 100.06125rem) {
+  .overview-services {
+    flex-direction: column;
+  }
+  .overview-services__services-menu .services-menu__list {
+    max-width: unset;
+  }
+}
+@media (width <= 81.31125rem) {
+  .overview-services__services-menu .services-menu__list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "tire-fitting car-wash" "сar-rapair technical-inspection" "сar-rapair refill-conditioning" "сar-rapair wheel-alignment";
+  }
+}
+@media (width <= 63.99875rem) {
+  .overview-services {
+    gap: 2.5rem;
+  }
+  .overview-services__services-menu .services-menu__list {
+    gap: 1.25rem;
   }
 }
 /*  ===================================  */
@@ -983,13 +1300,14 @@ button[aria-label]::before {
 .footer__inner {
   padding-block: clamp(0.9375rem, 0.6468023256rem + 1.1627906977vw, 1.5625rem) clamp(1.375rem, 0.2122093023rem + 4.6511627907vw, 3.875rem);
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto;
   grid-template-rows: repeat(2, auto);
   row-gap: clamp(1.9375rem, 1.414244186rem + 2.0930232558vw, 3.0625rem);
   column-gap: 1.625rem;
 }
 .footer__heading {
-  max-width: 20.6875rem;
+  max-width: 21.875rem;
+  width: 100%;
 }
 .footer__heading-text {
   font-size: 0.8125rem;
@@ -1037,7 +1355,7 @@ button[aria-label]::before {
 .footer__qs-line-text {
   font-size: 0.9375rem;
   line-height: 1.3;
-  max-width: 14.375rem;
+  max-width: 14.6875rem;
 }
 .footer__yandex-button {
   grid-area: yandex;
@@ -1063,7 +1381,7 @@ button[aria-label]::before {
 .footer__links-list {
   display: flex;
   flex-direction: column;
-  gap: 1.875rem 1.875rem;
+  gap: 1.9375rem 1.875rem;
 }
 .footer__links-link {
   letter-spacing: 0.06em;
@@ -1090,59 +1408,85 @@ button[aria-label]::before {
   }
 }
 @media (width <= 63.99875rem) {
+  .footer .container {
+    --container-padding-x: 1.875rem;
+  }
   .footer__inner {
-    grid-template-areas: "heading heading" "buttons buttons" "links-list svc";
+    padding-block: 1.5625rem 3.9375rem;
+    grid-template-areas: "heading buttons" "links-list links-list" "svc svc";
+    column-gap: 2.125rem;
   }
   .footer__heading {
     grid-area: heading;
     justify-self: center;
-    max-width: unset;
     text-align: center;
+    margin-left: -0.625rem;
   }
-  .footer__buttons {
-    grid-area: buttons;
+  .footer__heading-text {
+    font-size: 0.75rem;
+    letter-spacing: 0;
   }
   .footer__links {
     grid-area: links-list;
+    margin-bottom: 1.375rem;
+  }
+  .footer__links-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.25rem 1.5rem;
   }
   .footer__svc-links {
     grid-area: svc;
+    max-width: unset;
   }
   .footer__buttons {
+    grid-area: buttons;
     margin-inline: auto;
-    grid-template-columns: 1fr 1fr auto;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
     max-width: unset;
     width: 100%;
-    grid-template-rows: 1fr;
-    grid-template-areas: "yandex button qs";
-    row-gap: 2.25rem;
+    grid-template-areas: "yandex button" ". qs";
+    row-gap: 1rem;
+  }
+  .footer__button {
+    align-self: start;
+  }
+  .footer__yandex-button {
+    width: 3.375rem;
+    height: 4.3125rem;
+    align-self: start;
   }
 }
 @media (width <= 47.99875rem) {
-  .footer .conteiner {
+  .footer .container {
     --container-padding-x: 1rem;
   }
   .footer__inner {
+    padding-block: 0.6875rem 1.375rem;
+    grid-template-columns: 1fr;
     grid-template-areas: "heading" "buttons" "links-list" "svc";
     row-gap: 0;
   }
   .footer__heading {
+    max-width: unset;
     width: 100%;
     margin-bottom: 1rem;
-  }
-  .footer__heading-text {
-    font-size: 0.75rem;
-    letter-spacing: 0.03em;
+    margin-left: unset;
   }
   .footer__logo {
-    margin-bottom: 0.875rem;
+    margin-bottom: 1.125rem;
   }
   .footer__buttons {
     grid-template-rows: 1fr minmax(5.75rem, auto);
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: "button button" "yandex qs";
-    column-gap: 1.875rem;
+    column-gap: 1.6875rem;
+    row-gap: 2.3125rem;
     margin-bottom: 1.5rem;
+  }
+  .footer__qs-line {
+    min-width: 14.9375rem;
   }
   .footer__yandex-button {
     align-self: start;
@@ -1158,9 +1502,6 @@ button[aria-label]::before {
   }
 }
 @media (width <= 30.06125rem) {
-  .footer__heading {
-    margin-left: -0.625rem;
-  }
   .footer__yandex-button {
     margin-top: 0.4375rem;
   }
