added section messenger-action

--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -13,4 +13,5 @@
 @use "../blocks/header/_header.scss";
 @use "../blocks/promo/_promo-main-page.scss";
 @use "../blocks/overview-services/_overview-services.scss";
+@use "../blocks/messenger-action/_messenger-action.scss";
 @use "../blocks/footer/_footer.scss";
