--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -2,6 +2,13 @@
 
 /* Styles for common block section */
 .section {
+  margin-bottom: var(--section-margin-y);
+
+  &__title {
+    margin-block: 0 fluid(50, 20);
+    text-align: center;
+    line-height: 1.2;
+  }
   &__subtitle {
   }
 }
