--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -15,4 +15,5 @@
 @use "../blocks/overview-services/_overview-services.scss";
 @use "../blocks/messenger-action/_messenger-action.scss";
 @use "../blocks/special-offers/_special-offers.scss";
+@use "../blocks/our-clients/_our-clients.scss";
 @use "../blocks/footer/_footer.scss";
