--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -16,4 +16,5 @@
 @use "../blocks/messenger-action/_messenger-action.scss";
 @use "../blocks/special-offers/_special-offers.scss";
 @use "../blocks/our-clients/_our-clients.scss";
+@use "../blocks/certificates/_certificates.scss";
 @use "../blocks/footer/_footer.scss";
