--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -1421,8 +1421,8 @@ button[aria-label]::before {
   width: var(--clientsSlideWidth);
   height: var(--clientsSlideHeight);
   outline: var(--border-extra-light);
-  border-radius: var(--border-radius-small);
   background-color: var(--color-light);
+  border-radius: var(--border-radius-small);
 }
 @media (any-hover: hover) {
   .our-clients__link:hover {
@@ -1440,14 +1440,72 @@ button[aria-label]::before {
     filter: brightness(80%);
   }
 }
+.our-clients__link:active .our-clients__image {
+  scale: 0.98;
+}
 .our-clients__image {
   transition-duration: var(--transition-duration);
   width: var(--clientsSlideWidth);
   height: var(--clientsSlideHeight);
+  border-radius: inherit;
 }
 
 @media (width <= 63.99875rem) {
   .our-clients__title {
+    line-height: 1.3;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for section certificates ( slider with мasters' certificates ) . source -- home page */
+.certificates {
+  overflow: hidden;
+}
+.certificates__title {
+  line-height: 1.2;
+}
+.certificates__slider {
+  --certificateSlideWidth: 7.375rem;
+  --certificateSlideHeight: 10.125rem;
+  --certificateSlideImageWidth: 7.1875rem;
+  --certificateSlideImageHeight: var(--certificateSlideHeight);
+  min-height: calc(var(--certificateSlideHeight) + 0.0625rem);
+}
+.certificates__link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: var(--certificateSlideWidth);
+  height: var(--certificateSlideHeight);
+}
+@media (any-hover: hover) {
+  .certificates__link:hover {
+    filter: opacity(100);
+  }
+  .certificates__link:hover .certificates__image {
+    filter: brightness(80%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .certificates__link:active {
+    filter: opacity(100);
+  }
+  .certificates__link:active .certificates__image {
+    filter: brightness(80%);
+  }
+}
+.certificates__link:active .certificates__image {
+  scale: 0.98;
+}
+.certificates__image {
+  transition-duration: var(--transition-duration);
+  width: var(--certificateSlideImageWidth);
+  height: var(--certificateSlideHeight);
+}
+
+@media (width <= 63.99875rem) {
+  .certificates__title {
     line-height: 1.3;
   }
 }
