--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -205,7 +205,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  animation-name: scrolling-header;
+  animation-name: scrolling-sticky;
   animation-fill-mode: both;
   animation-timeline: scroll();
   animation-range: 12.5rem 18.75rem;
