--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -17,4 +17,5 @@
 @use "../blocks/special-offers/_special-offers.scss";
 @use "../blocks/our-clients/_our-clients.scss";
 @use "../blocks/certificates/_certificates.scss";
+@use "../blocks/online-registration/_online-registration.scss";
 @use "../blocks/footer/_footer.scss";
