--- a/styles/base/_animation.scss
+++ b/styles/base/_animation.scss
@@ -1,6 +1,6 @@
 @use "../healpers" as *;
 /* Animations */
-@keyframes scrolling-header {
+@keyframes scrolling-sticky {
   to {
     box-shadow: 0 0 10rem 1rem var(--color-black-opacity-80);
   }
