--- a/styles/blocks/our-clients/_our-clients.scss
+++ b/styles/blocks/our-clients/_our-clients.scss
@@ -1,17 +1,13 @@
 @use "../../healpers" as *;
 /* Styles for section our clients( slider with companies logos ) . source -- home page */
 .our-clients {
-  overflow: hidden;
-
-  &__title {
-    line-height: 1.2;
-  }
+  overflow-x: hidden;
 
   &__slider {
     --clientsSlideWidth: #{rem(190)};
     --clientsSlideHeight: #{rem(115)};
 
-    min-height: calc(var(--clientsSlideHeight) + #{rem(1)});
+    min-height: calc(var(--clientsSlideHeight) + #{rem(2)});
   }
 
   &__link {
@@ -47,14 +43,5 @@
   }
 }
 
-@include tablet-media {
-  .our-clients {
-    &__title {
-      font-size: rem(24);
-      line-height: 1.3;
-      margin-block: 0 rem(20);
-    }
-  }
-}
 /*  ===================================  */
 /*  ===================================  */
