--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -9,9 +9,15 @@
     text-align: center;
     line-height: 1.2;
   }
-  &__subtitle {
+}
+@include tablet-media {
+  .section {
+    &__title {
+      font-size: rem(24);
+      line-height: 1.3;
+      margin-block: 0 rem(20);
+    }
   }
 }
-
 /*  ===================================  */
 /*  ===================================  */
