--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -155,7 +155,9 @@ svg * {
   --color-gray-700: #66605f;
   --color-gray-600: #746e6d;
   --color-gray-500: #968e8e;
+  --color-gray-400: #ccc5c5;
   --color-gray-300: #e1dcdb;
+  --color-gray-100: #f3eded;
   --color-gray-90: #dcdcdc;
   --color-gray-50: #fbf8f8;
   --color-grad-1: linear-gradient(
@@ -186,10 +188,12 @@ svg * {
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
   --color-success: var(--color-green);
+  --color-border-medium: var(--color-gray-700);
   --color-border: var(--color-gray-500);
   --color-border-light: var(--color-gray-300);
   --color-border-extra-light: var(--color-gray-90);
   --color-border-active: var(--color-accent);
+  --border: 0.0625rem solid var(--color-border);
   --border-light: 0.0625rem solid var(--color-border-light);
   --border-extra-light: 0.05rem solid var(--color-border-extra-light);
   --border-radius-extra-small: 0.25rem;
@@ -391,6 +395,10 @@ a:active {
   scale: 0.98;
 }
 
+:focus {
+  transition-duration: 0s !important;
+}
+
 a[aria-label],
 button[aria-label] {
   position: relative;
@@ -409,7 +417,7 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  ===================================  */
 /* Animations */
-@keyframes scrolling-header {
+@keyframes scrolling-sticky {
   to {
     box-shadow: 0 0 10rem 1rem var(--color-black-opacity-80);
   }
@@ -468,18 +476,24 @@ button[aria-label]::before {
   background-color: var(--color-accent);
 }
 .button--light {
+  font-size: 0.8125rem;
   line-height: 1.69;
   background-color: var(--color-light);
   color: var(--text-color-medium);
   border: 0.0625rem solid currentColor;
 }
 .button--light-accent {
-  background-color: var(--color-accent);
+  color: var(--color-accent);
+  background-color: var(--color-light);
 }
 
 @media (width <= 47.99875rem) {
   .button {
     --buttonColor: var(--color-blue-light);
+  }
+  .button--light {
+    min-height: var(--button-height-small);
+    padding: 0.3125rem 0.6875rem;
   }
 }
 /*  ===================================  */
@@ -529,6 +543,14 @@ button[aria-label]::before {
   margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
   text-align: center;
   line-height: 1.2;
+}
+
+@media (width <= 63.99875rem) {
+  .section__title {
+    font-size: 1.5rem;
+    line-height: 1.3;
+    margin-block: 0 1.25rem;
+  }
 }
 /*  ===================================  */
 /*  ===================================  */
@@ -738,7 +760,7 @@ button[aria-label]::before {
   position: sticky;
   top: 0;
   z-index: 100;
-  animation-name: scrolling-header;
+  animation-name: scrolling-sticky;
   animation-fill-mode: both;
   animation-timeline: scroll();
   animation-range: 12.5rem 18.75rem;
@@ -1404,15 +1426,12 @@ button[aria-label]::before {
 /*  ===================================  */
 /* Styles for section our clients( slider with companies logos ) . source -- home page */
 .our-clients {
-  overflow: hidden;
-}
-.our-clients__title {
-  line-height: 1.2;
+  overflow-x: hidden;
 }
 .our-clients__slider {
   --clientsSlideWidth: 11.875rem;
   --clientsSlideHeight: 7.1875rem;
-  min-height: calc(var(--clientsSlideHeight) + 0.0625rem);
+  min-height: calc(var(--clientsSlideHeight) + 0.125rem);
 }
 .our-clients__link {
   display: block;
@@ -1450,28 +1469,18 @@ button[aria-label]::before {
   border-radius: inherit;
 }
 
-@media (width <= 63.99875rem) {
-  .our-clients__title {
-    font-size: 1.5rem;
-    line-height: 1.3;
-    margin-block: 0 1.25rem;
-  }
-}
 /*  ===================================  */
 /*  ===================================  */
 /* Styles for section certificates ( slider with мasters' certificates ) . source -- home page */
 .certificates {
-  overflow: hidden;
-}
-.certificates__title {
-  line-height: 1.2;
+  overflow-x: hidden;
 }
 .certificates__slider {
   --certificateSlideWidth: 7.375rem;
   --certificateSlideHeight: 10.125rem;
   --certificateSlideImageWidth: 7.1875rem;
   --certificateSlideImageHeight: var(--certificateSlideHeight);
-  min-height: calc(var(--certificateSlideHeight) + 0.0625rem);
+  min-height: calc(var(--certificateSlideHeight) + 0.125rem);
 }
 .certificates__link {
   display: inline-flex;
@@ -1506,13 +1515,380 @@ button[aria-label]::before {
   height: var(--certificateSlideHeight);
 }
 
-@media (width <= 63.99875rem) {
-  .certificates__title {
-    font-size: 1.5rem;
-    line-height: 1.3;
-    margin-block: 0 1.25rem;
+/*  ===================================  */
+/*  ===================================  */
+/* Search block. ( form + input + button*/
+.search {
+  --searchBlockHeight: 2.375rem;
+  --searchBgColor: var(--color-light);
+  --searchBgColorHover: var(--color-gray-100);
+  --searchBorder: var(--border-light);
+  --searchIconColor: var(--color-border-medium);
+  position: relative;
+  display: block;
+}
+.search__input {
+  min-height: var(--searchBlockHeight);
+  width: 100%;
+  padding-inline: 1.25rem calc(var(--searchBlockHeight) + 1.25rem);
+  padding-block: 0.1875rem;
+  border: none;
+  outline: var(--searchBorder);
+  border-radius: var(--border-radius-small);
+  background-color: var(--searchBgColor);
+  transition-duration: var(--transition-duration) !important;
+}
+.search__input:focus {
+  background-color: var(--searchBgColor) !important;
+  outline: var(--border);
+}
+@media (any-hover: hover) {
+  .search__input:hover {
+    background-color: var(--searchBgColorHover);
   }
 }
+@media (any-hover: hover) and (any-hover: none) {
+  .search__input:active {
+    background-color: var(--searchBgColorHover);
+  }
+}
+.search__button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute !important;
+  top: 0;
+  right: 0;
+  border-radius: var(--border-radius-small);
+  min-height: var(--searchBlockHeight);
+  width: var(--searchBlockHeight);
+}
+@media (any-hover: hover) {
+  .search__button:hover {
+    filter: opacity(0.6);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .search__button:active {
+    filter: opacity(0.6);
+  }
+}
+.search__button:active {
+  filter: opacity(0.3);
+}
+.search__icon {
+  fill: transparent;
+  stroke: var(--searchIconColor);
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Filter services in the block location. ( form and input type ratios*/
+.locations-filter__border {
+  display: flex;
+  align-items: center;
+  column-gap: 1.5rem;
+  outline: none;
+}
+.locations-filter__element {
+  display: flex;
+  align-items: center;
+  column-gap: 0.6875rem;
+  outline: var(--border-light);
+  border-radius: var(--border-radius-small);
+  padding: 0.875rem 0.6875rem 0.75rem 0.6875rem;
+  font-weight: 700;
+  font-size: 0.9375rem;
+  line-height: 1.1;
+  text-transform: uppercase;
+  transition-duration: var(--transition-duration) !important;
+  will-change: transform;
+}
+@media (any-hover: hover) {
+  .locations-filter__element:hover {
+    filter: opacity(70%);
+    outline: var(--border);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .locations-filter__element:active {
+    filter: opacity(70%);
+    outline: var(--border);
+  }
+}
+.locations-filter__element:active {
+  scale: 0.98;
+}
+.locations-filter__input {
+  position: relative;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.locations-filter__input::before {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  outline: var(--border);
+  border-radius: 0.125rem;
+  background-color: var(--color-light);
+  cursor: pointer;
+}
+.locations-filter__input:checked::before {
+  content: "✔";
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for location-card . Source - block locations */
+.location-card {
+  --locationCardBg: var(--color-light);
+  --locationCardBgActive: var(--color-accent-200);
+  --locationCardHeight: 12.75rem;
+  display: flex;
+  min-height: var(--locationCardHeight);
+  transition-duration: var(--transition-duration);
+  outline: var(--border-light);
+  border-radius: var(--border-radius-small);
+  background-color: var(--locationCardBg);
+}
+.location-card.is-active {
+  background-color: var(--locationCardBgActive);
+}
+@media (any-hover: hover) {
+  .location-card:hover {
+    background-color: var(--locationCardBgActive);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .location-card:active {
+    background-color: var(--locationCardBgActive);
+  }
+}
+.location-card__image {
+  width: inherit;
+  min-height: inherit;
+  border-radius: var(--border-radius-small) 0 0 var(--border-radius-small);
+}
+.location-card__image-wrapper {
+  width: 8.75rem;
+  min-height: 100%;
+  flex-shrink: 0;
+}
+.location-card__body {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25rem;
+  justify-content: end;
+  padding: 1.25rem;
+  color: var(--text-color-dark-secondary);
+}
+.location-card__address {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
+  flex-grow: 1;
+  text-align: start;
+  letter-spacing: var(--letter-spacing);
+  transition-duration: var(--transition-duration) !important;
+}
+@media (any-hover: hover) {
+  .location-card__address:hover {
+    filter: opacity(0.6);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .location-card__address:active {
+    filter: opacity(0.6);
+  }
+}
+.location-card__address:active {
+  filter: opacity(0.3);
+}
+.location-card__text-block {
+  font-size: 1rem;
+  line-height: 1.4;
+  word-spacing: 0.1em;
+}
+.location-card__text-block p:not(:last-child) {
+  margin-bottom: 0;
+}
+.location-card__register-time--today {
+  color: var(--color-green-light);
+}
+.location-card__buttons {
+  display: flex;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+@media (width <= 47.99875rem) {
+  .location-card {
+    --locationCardHeight: 9.875rem;
+    row-gap: 0.625rem;
+  }
+  .location-card__image-wrapper {
+    width: 6.25rem;
+  }
+  .location-card__body {
+    padding: 0.625rem;
+  }
+  .location-card__address {
+    letter-spacing: -0.02em;
+  }
+  .location-card__text-block {
+    font-size: 0.9375rem;
+    word-spacing: 0.2em;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for the map. Current, will need to be added...*/
+.map-block {
+  position: relative;
+}
+.map-block__iframe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.map-block__marker {
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  width: clamp(1.125rem, 0.3691860465rem + 3.023255814vw, 2.75rem);
+  height: clamp(1.5rem, 0.511627907rem + 3.9534883721vw, 3.625rem);
+}
+.map-block__marker--active {
+  left: 40%;
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Component for the user to select a suitable service on the map */
+.locations {
+  --locationScrollThumbColor: var(--color-gray-400);
+  --locationScrollThumbColorHover: var(--color-gray-500);
+  --locationScrollBgColor: var(--color-gray-90);
+  --locationListHeight: 45rem;
+}
+.locations__filter {
+  margin-block: 0 clamp(0.625rem, 0.0436046512rem + 2.3255813953vw, 1.875rem);
+}
+.locations__body {
+  height: var(--locationListHeight);
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  margin-block: 0 clamp(0.625rem, 0.0436046512rem + 2.3255813953vw, 1.875rem);
+}
+.locations__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25rem;
+  max-width: 31.6875rem;
+  width: 100%;
+  height: inherit;
+  padding-inline: 0.0625rem 0.25rem;
+  padding-block: 0.0625rem 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.locations__list::-webkit-scrollbar {
+  width: 0.275rem;
+  height: 0.275rem;
+}
+.locations__list::-webkit-scrollbar-track {
+  background: var(--locationScrollBgColor);
+}
+.locations__list::-webkit-scrollbar-thumb {
+  background: var(--locationScrollThumbColor);
+}
+.locations__list::-webkit-scrollbar-thumb:hover {
+  background: var(--locationScrollThumbColorHover);
+}
+.locations__list::-webkit-scrollbar-button {
+  display: none;
+}
+.locations__list-item--search {
+  position: sticky;
+  top: 0;
+  animation-name: scrolling-sticky;
+  animation-fill-mode: both;
+  animation-timeline: scroll();
+  animation-range: 1.25rem 2.5rem;
+}
+.locations__map-block {
+  max-width: 46.0625rem;
+  width: 100%;
+}
+
+@media (width <= 81.31125rem) {
+  .locations {
+    --locationListHeight: 55.875rem;
+  }
+  .locations__body {
+    flex-direction: column-reverse;
+    height: auto;
+    gap: 1.25rem;
+  }
+  .locations__list {
+    height: var(--locationListHeight);
+    max-width: unset;
+    row-gap: 0.625rem;
+  }
+  .locations__map-block {
+    height: 19.5rem;
+    max-width: unset;
+    border-radius: var(--border-radius-small);
+    overflow: hidden;
+  }
+}
+@media (width <= 63.99875rem) {
+  .locations__filter {
+    margin-block: 0 0.625rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .locations {
+    --locationListHeight: 41.875rem;
+  }
+}
+@media (width <= 30.06125rem) {
+  .locations__list {
+    padding-inline: 0.0625rem 0.125rem;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for section online-registration.( home page. block containing cervices map */
+.online-registration {
+  --section-margin-y: 5rem;
+}
+.online-registration__subtitle {
+  max-width: 48.625rem;
+  color: var(--text-color-dark-secondary);
+  text-align: center;
+  line-height: 1.5;
+  font-weight: 600;
+  margin-inline: auto;
+  margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
+}
+.online-registration__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.875rem;
+}
+
 /*  ===================================  */
 /*  ===================================  */
 /* Navigation footer section */
