added section advantages

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -18,6 +18,7 @@
 
   --color-gray-900: #161312;
   --color-gray-800: #352f2e;
+  --color-gray-750: #484848;
   --color-gray-700: #66605f;
   --color-gray-600: #746e6d;
   --color-gray-500: #968e8e;
