--- a/styles/blocks/our-clients/_our-clients.scss
+++ b/styles/blocks/our-clients/_our-clients.scss
@@ -2,6 +2,7 @@
 /* Styles for section our clients( slider with companies logos ) . source -- home page */
 .our-clients {
   overflow-x: hidden;
+  margin-block: 0 fluid(130, 80);
 
   &__slider {
     --clientsSlideWidth: #{rem(190)};
@@ -43,5 +44,10 @@
   }
 }
 
+@include tablet-media {
+  .our-clients {
+    margin-block: 0 rem(80);
+  }
+}
 /*  ===================================  */
 /*  ===================================  */
