--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -152,6 +152,7 @@ svg * {
   --color-accent-600: #dc4401;
   --color-gray-900: #161312;
   --color-gray-800: #352f2e;
+  --color-gray-750: #484848;
   --color-gray-700: #66605f;
   --color-gray-600: #746e6d;
   --color-gray-500: #968e8e;
@@ -766,6 +767,10 @@ button[aria-label]::before {
   animation-range: 12.5rem 18.75rem;
   background-color: var(--color-accent-50);
 }
+.header__logo {
+  width: 20.625rem;
+  height: 4.375rem;
+}
 .header__general {
   display: flex;
   justify-content: space-between;
@@ -827,6 +832,10 @@ button[aria-label]::before {
 @media (width <= 47.99875rem) {
   .header {
     background-color: var(--color-light);
+  }
+  .header__logo {
+    width: 17.0625rem;
+    height: 3.625rem;
   }
   .header__general {
     padding-inline: 0.625rem 0.5rem;
@@ -1427,6 +1436,7 @@ button[aria-label]::before {
 /* Styles for section our clients( slider with companies logos ) . source -- home page */
 .our-clients {
   overflow-x: hidden;
+  margin-block: 0 clamp(5rem, 3.5465116279rem + 5.8139534884vw, 8.125rem);
 }
 .our-clients__slider {
   --clientsSlideWidth: 11.875rem;
@@ -1469,6 +1479,82 @@ button[aria-label]::before {
   border-radius: inherit;
 }
 
+@media (width <= 63.99875rem) {
+  .our-clients {
+    margin-block: 0 5rem;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Block-card for advantage slider*/
+.advantage-card {
+  --advantageCardTextColor: var(--color-gray-750);
+  --advantageCardTitleTextColor: var(--color-gray-800);
+  max-width: 18.5625rem;
+  width: 100%;
+  padding: 1.25rem;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+}
+.advantage-card__image {
+  width: 3.75rem;
+  height: 3.75rem;
+  margin-bottom: 1.5rem;
+}
+.advantage-card__heading {
+  margin-bottom: 0.625rem;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  text-transform: uppercase;
+  color: var(--advantageCardTitleTextColor);
+}
+.advantage-card__text {
+  color: var(--advantagesCardextColor);
+  font-size: 1rem;
+  line-height: 1.4;
+}
+
+@media (width <= 47.99875rem) {
+  .advantage-card__text {
+    font-size: 0.9375rem;
+  }
+}
+/*  ===================================  */
+/*  ===================================  */
+/* Section advantages.Slider. source --home-page*/
+.advantages {
+  --advantagesSlidesQuantity: 4;
+  overflow-x: hidden;
+}
+.advantages__slider {
+  margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
+}
+.advantages__slider-wrapper {
+  display: grid;
+  grid-template-rows: auto !important;
+  grid-template-columns: repeat(var(--advantagesSlidesQuantity), 18.5625rem);
+  column-gap: 1.5rem;
+}
+.advantages__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.advantages__button {
+  font-size: 1rem;
+}
+
+@media (width <= 63.99875rem) {
+  .advantages__slider {
+    margin-block: 0 1.25rem;
+  }
+  .advantages__buttons {
+    column-gap: 1rem;
+    justify-content: start;
+  }
+}
 /*  ===================================  */
 /*  ===================================  */
 /* Styles for section certificates ( slider with мasters' certificates ) . source -- home page */
